# coursera-deep-learning-specialization

./: .gitattributes  .gitignore  pyproject.toml
C1 - Neural Networks and Deep Learning/Week 1/: Week 1 Quiz - Introduction to deep learning.md
C1 - Neural Networks and Deep Learning/Week 2/Logistic Regression as a Neural Network/: Logistic_Regression_with_a_Neural_Network_mindset_v6a.ipynb
C1 - Neural Networks and Deep Learning/Week 2/Python Basics with Numpy/: Python_Basics_With_Numpy_v3a_solution.ipynb
C1 - Neural Networks and Deep Learning/Week 3/: Week 3 Quiz - Shallow Neural Networks.md
C1 - Neural Networks and Deep Learning/Week 3/Planar data classification with one hidden layer/: Planar_data_classification_with_onehidden_layer_v6c.ipynb  Planar_data_classification_with_onehidden_layer_v6c_solution.ipynb
C1 - Neural Networks and Deep Learning/Week 4/Building your Deep Neural Network - Step by Step/: Building_your_Deep_Neural_Network_Step_by_Step_v8a_solution.ipynb
C2 - Improving Deep Neural Networks Hyperparameter tuning, Regularization and Optimization/Week 2/: Optimization_methods_v1b.ipynb
C2 - Improving Deep Neural Networks Hyperparameter tuning, Regularization and Optimization/Week 3/: Tensorflow_introduction_new.ipynb
C3 - Structuring Machine Learning Projects/: Week 2 Quiz - Autonomous driving (case study).md
C4 - Convolutional Neural Networks/Week 1/: Convolution_model_Application.ipynb  Convolution_model_Application_solution.ipynb  Convolution_model_Application_v1a copy.ipynb  Convolution_model_Application_v1a.ipynb  Convolution_model_Step_by_Step_v1.ipynb  Convolution_model_Step_by_Step_v2a copy.ipynb  Convolution_model_Step_by_Step_v2a.ipynb
C4 - Convolutional Neural Networks/Week 2/: Week 2 Quiz - Deep convolutional models.md
C4 - Convolutional Neural Networks/Week 2/KerasTutorial/: Keras_Tutorial_v2a.ipynb  (+1 more)
(+26 files in other folders)
