[tool.poetry]
name = "coursera-deep-learning-specialization"
version = "0.1.0"
description = ""
authors = ["anhtuan23 <dotuananh.dta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.0"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
h5py = "^3.9.0"
scipy = "^1.11.3"
pillow = "^10.0.1"
scikit-learn = "^1.3.1"
tensorflow = {extras = ["and-cuda"], version = "^2.14.0"}
pandas = "^2.1.1"
pydot = "^1.4.2"
imageio = "^2.31.5"
music21 = "^9.1.0"
mido = "^1.3.0"
pydub = "^0.25.1"
emoji = "^2.8.0"
faker = "^20.1.0"
tqdm = "^4.66.1"
babel = "^2.13.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
